feat: added more aliases by suggestion of Spiro