@@ -15,10 +15,10 @@ public class ComChatConfig implements ConfigData {
     @ConfigEntry.ColorPicker
     public int color = 42752;
     @ConfigEntry.Gui.Tooltip
-    public List<String> togglePhrases = Arrays.asList("gc toggle","groupchat toggle");
+    public List<String> togglePhrases = List.of("gc toggle","groupchat toggle");
     @ConfigEntry.Gui.Tooltip
-    public List<String> escapedPhrases = Arrays.asList("[wW][bB].?", "[wW]elcome.?");
+    public List<String> escapedPhrases = List.of("[wW][bB].?", "[wW]elcome.?");
     @ConfigEntry.Gui.Tooltip
-    public List<String> aliases = List.of("cc");
+    public List<String> aliases = List.of("cc","gc","groupchat","communitychat");
 
 }
